<resources>
	<string name="app_name" translatable="false">AzaharTrigger</string>
	<string name="app_disclaimer">
		This software will run applications for the Nintendo 3DS handheld game console. No game titles are included.\n\nBefore you can begin with emulating, please select a folder to store Azahar\'s user data in.\n\nWhat\'s this:\n<a href='https://web.archive.org/web/20240304193549/https://github.com/citra-emu/citra/wiki/Citra-Android-user-data-and-storage'>Wiki - Citra Android user data and storage</a>
	</string>
	<string name="app_notification_channel_name" translatable="false">Azahar</string>
	<string name="app_notification_channel_id" translatable="false">Azahar</string>
	<string name="app_notification_channel_description">Azahar 3DS emulator notifications</string>
	<string name="app_notification_running">Azahar is Running</string>
	<string name="app_game_install_description">Next, you will need to select an Applications Folder. Azahar will display all of the 3DS ROMs inside of the selected folder in the app.\n\nCIA ROMs, updates and DLC will need to be installed separately by clicking on the folder icon and selecting Install CIA.</string>
	<string name="grid_menu_core_settings">Settings</string>
	<string name="grid_menu_core_export_zippass">Export ZipPass Data</string>
	<string name="grid_menu_core_import_zippass">Import ZipPass Data</string>
	<string name="home_options">Options</string>
	<string name="home_search">Search</string>
	<string name="home_games">Applications</string>
	<string name="settings_description">Configure emulator settings</string>
	<string name="export_zippass_description">Export StreetPass data as a zip file</string>
	<string name="import_zippass_description">Import StreetPass data as a zip file</string>
	<string name="install_game_content">Install CIA file</string>
	<string name="install_game_content_description">Install applications, updates or DLC</string>
	<string name="share_log">Share Log</string>
	<string name="share_log_description">Share Azahar\'s log file to debug issues</string>
	<string name="gpu_driver_manager">GPU Driver Manager</string>
	<string name="install_gpu_driver">Install GPU driver</string>
	<string name="install_gpu_driver_description">Install alternative drivers for potentially better performance or accuracy</string>
	<string name="driver_already_installed">Driver already installed</string>
	<string name="custom_driver_not_supported">Custom drivers not supported</string>
	<string name="custom_driver_not_supported_description">Custom driver loading isn\'t currently supported for this device.\nCheck this option again in the future to see if support was added!</string>
	<string name="share_log_not_found">No log file found</string>
	<string name="select_games_folder">Select Applications Folder</string>
	<string name="select_games_folder_description">Allows Azahar to populate the application list</string>
	<string name="about">About</string>
	<string name="clear_streetpass_config">Clear StreetPass Configuration</string>
	<string name="citra_description">An open-source 3DS emulator</string>
	<string name="about_description">Build version, credits, and more</string>
	<string name="clear_streetpass_config_description">In case something went wrong with ZipPass</string>
	<string name="games_dir_selected">Application directory selected</string>
	<string name="select_citra_user_folder_home_description">Changes the files that Azahar uses to load applications</string>
	<string name="theme_and_color_description">Modify the look of the app</string>
	<string name="install_cia_title">Install CIA</string>
	<string name="select_gpu_driver">Select GPU driver</string>
	<string name="select_gpu_driver_title">Would you like to replace your current GPU driver?</string>
	<string name="select_gpu_driver_install">Install</string>
	<string name="select_gpu_driver_default">Default</string>
	<string name="select_gpu_driver_install_success">Installed %s</string>
	<string name="select_gpu_driver_use_default">Using default GPU driver</string>
	<string name="select_gpu_driver_error">Invalid driver selected, using system default!</string>
	<string name="system_gpu_driver">System GPU driver</string>
	<string name="installing_driver">Installing driver…</string>
	<string name="copied_to_clipboard">Copied to clipboard</string>
	<string name="contributors">Contributors</string>
	<string name="contributors_description">Contributors who made Azahar possible</string>
	<string name="contributors_link" translatable="false">https://github.com/AzaharTrigger/AzaharTrigger/graphs/contributors</string>
	<string name="licenses_description">Projects used by Azahar for Android</string>
	<string name="build">Build</string>
	<string name="licenses">Licenses</string>
	<string name="support_link" translatable="false">https://github.com/AzaharTrigger/AzaharTrigger/discussions</string>
	<string name="website_link" translatable="false">https://github.com/AzaharTrigger/AzaharTrigger</string>
	<string name="github_link" translatable="false">https://github.com/AzaharTrigger/AzaharTrigger</string>
	<string name="welcome">Welcome!</string>
	<string name="welcome_description">Learn how to set up &lt;b>Azahar&lt;/b> and jump into emulation.</string>
	<string name="get_started">Get started</string>
	<string name="step_complete">Complete!</string>
	<string name="games">Applications</string>
	<string name="games_description">Select your &lt;b>Applications&lt;/b> folder with the button below.</string>
	<string name="done">Done</string>
	<string name="done_description">You\'re all set.\nEnjoy using the emulator!</string>
	<string name="text_continue">Continue</string>
	<string name="notifications">Notifications</string>
	<string name="notifications_description">Grant the notification permission with the button below.</string>
	<string name="give_permission">Grant permission</string>
	<string name="notification_warning">Skip granting the notification permission?</string>
	<string name="notification_warning_description">Azahar won\'t be able to notify you of important information.</string>
	<string name="filesystem_permission_warning">Missing Permissions</string>
	<string name="filesystem_permission_warning_description">Azahar requires permission to manage files on this device in order to store and manage its data.\n\nPlease grant the \"Filesystem\" permission before continuing.</string>
	<string name="camera_permission">Camera</string>
	<string name="camera_permission_description">Grant the camera permission below to emulate the 3DS camera.</string>
	<string name="microphone_permission">Microphone</string>
	<string name="microphone_permission_description">Grant the microphone permission below to emulate the 3DS microphone.</string>
	<string name="filesystem_permission">Filesystem</string>
	<string name="filesystem_permission_description">Grant the filesystem permission below to allow Azahar to store files.</string>
	<string name="permission_denied">Permission denied</string>
	<string name="add_games_warning">Skip selecting applications folder?</string>
	<string name="add_games_warning_description">Software won\'t be displayed in the Applications list if a folder isn\'t selected.</string>
	<string name="add_games_warning_help" translatable="false">https://web.archive.org/web/20240304210021/https://citra-emu.org/wiki/dumping-game-cartridges/</string>
	<string name="permissions">Permissions</string>
	<string name="select_emulator_data_folders">Data Folders</string>
	<string name="select_emulator_data_folders_description"><![CDATA[Select data folders<br/>(User folder is required)]]></string>
	<string name="permissions_description">Grant optional permissions to use specific features of the emulator</string>
	<string name="warning_help">Help</string>
	<string name="warning_skip">Skip</string>
	<string name="warning_cancel">Cancel</string>
	<string name="select_citra_user_folder">Select User Folder</string>
	<string name="select_citra_user_folder_description"><![CDATA[Select your <a href="https://web.archive.org/web/20240304193549/https://github.com/citra-emu/citra/wiki/Citra-Android-user-data-and-storage">user data</a> directory with the button below.]]></string>
	<string name="select_which_user_directory_to_use">You appear to have user directories set for both Lime3DS and Azahar. This is likely because you upgraded to Azahar, and when prompted chose a different user directory than what was being used for Lime3DS.\n\nThis may have resulted in you thinking you lost saves or other settings - we apologize if that happened.\n\nWould you like to go back to using your original Lime3DS user directory, restoring settings and save games from Lime3DS, or keep your current Azahar user directory?\n\nNeither directory will be deleted, regardless of your choice, and you may freely switch between them using the Select User Folder option.</string>
	<string name="keep_current_azahar_directory">Keep Current Azahar Directory</string>
	<string name="use_prior_lime3ds_directory">Use Prior Lime3DS Directory</string>
	<string name="select">Select</string>
	<string name="cannot_skip">You can\'t skip setting up the user folder</string>
	<string name="cannot_skip_directory_description">This step is required to allow Azahar to work. Please select a directory and then you can continue.</string>
	<string name="selecting_user_directory_without_write_permissions">
		You have lost write permissions on your <a href="https://web.archive.org/web/20240304193549/https://github.com/citra-emu/citra/wiki/Citra-Android-user-data-and-storage">user data</a> directory, where saves and other information are stored. This can happen after some app or Android updates. Please re-select the directory to regain permissions so you can continue.
	</string>
	<string name="invalid_selection">Invalid Selection</string>
	<string name="invalid_user_directory">The user directory selection was invalid.\nPlease re-select the user directory, ensuring that you navigate to it from the root of your device\'s storage.</string>
	<string name="filesystem_permission_lost">Azahar has lost permission to manage files on this device. This can happen after some app or Android updates. Please re-grant this permission on the next screen to continue using the app.</string>
	<string name="cannot_skip_directory_help" translatable="false">https://web.archive.org/web/20240304193549/https://github.com/citra-emu/citra/wiki/Citra-Android-user-data-and-storage</string>
	<string name="set_up_theme_settings">Theme Settings</string>
	<string name="setup_theme_settings_description">Configure your theme preferences for Azahar.</string>
	<string name="setup_set_theme">Set Theme</string>
	<string name="search_and_filter_games">Search and Filter Applications</string>
	<string name="home_search_games">Search Applications</string>
	<string name="search_recently_played">Recently Played</string>
	<string name="search_recently_added">Recently Added</string>
    <string name="touch_input_bindings">Touch Input Bindings</string>
    <string name="touch_input_bindings_description">Map controller buttons and axes to position on the 3DS bottom touchscreen.</string>
    <string name="delete_all">Delete All</string>
    <string name="profile">Profile</string>
    <string name="profile_options">Profile options</string>
	<string name="clear">Clear</string>
	<string name="refresh">Refresh</string>
	<string name="multiplayer_username">Username</string>
	<string name="multiplayer_room_browser">Public Rooms</string>
	<string name="multiplayer_no_rooms_found">No public rooms found</string>
	<string name="multiplayer_hide_full_rooms">Hide Full Rooms</string>
	<string name="multiplayer_hide_empty_rooms">Hide Empty Rooms</string>
	<string name="multiplayer_hide_locked_rooms">Hide Locked</string>
	<string name="multiplayer_tap_refresh_to_check_again">Tap refresh to check again</string>
	<string name="multiplayer_search_public_lobbies">Search Public Lobbies...</string>
</resources>